--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <p class="lead">Enhance your cooking pleasure and entertain people at a party. Enjoy seamless music by listening to your favorite playlists, songs and artists using Spotify. Or stream non-stop entertainment with access to global radio stations, news, podcasts and comedy shows on TuneIn.</p>
         </div>
         <div class="col-md-5 order-md-1">
-            <img class="img-fluid" src="../img/about-2.jpg" alt="">
+            <img class="img-fluid" src="./img/about-2.jpg" alt="">
              
         </div>
     </div>
@@ -140,7 +140,7 @@
             <p class="lead">Access your favorite web services* without a PC or mobile device. Using the embedded Internet browser app you can view online content, such as news, social media and much more. You can also create shortcuts on the home screen or save links to popular websites, so you can quickly access them.</p>
         </div>
         <div class="col-md-5">
-            <img class="img-fluid" src="../img/about-3jpg.webp" alt="">
+            <img class="img-fluid" src="./img/about-3jpg.webp" alt="">
              
         </div>
     </div>
