--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
                 <div id="carouselExampleControls" class="carousel slide carousel-fluid carousel-fade" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="../img/product1a.jpg" class="d-block w-100" alt="...">
+                            <img src="./img/product1a.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="../img/product1b.jpg" class="d-block w-100" alt="...">
+                            <img src="./img/product1b.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="../img/product1c.jpg" class="d-block w-100" alt="...">
+                            <img src="./img/product1c.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="../img/product1d.jpg" class="d-block w-100" alt="...">
+                            <img src="./img/product1d.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="../img/product1e.jpg" class="d-block w-100" alt="...">
+                            <img src="./img/product1e.jpg" class="d-block w-100" alt="...">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -116,7 +116,7 @@
             <p class="lead">Watch TV programs or access online content. Using a widget you can quickly launch popular video streaming or social media apps. The SmartView app can also display what’s showing on any Samsung Smart TV* and lets you view and control the millions of apps that are available on your smartphone**.</p>
         </div>
         <div class="col-md-5">
-            <img class="img-fluid" src="../img/about-1jpg.webp" alt="">
+            <img class="img-fluid" src="./img/about-1jpg.webp" alt="">
              
         </div>
     </div>
