--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <!-- <img class="img-fluid w-10 h-10" src="https://images.samsung.com/is/content/samsung/p6pim/in/feature/404590/in-934l-flex-zone-french-door-refrigerator-rf90a955387-521716227.svg?$96_96_PNG$" alt=""> -->
               <p>BESPOKE-Dual Tone</p>
           </div>
-          <div class="col bg-primary border border-dark rounded text-center pt-2">
+          <div class="col bg-light border border-dark rounded text-center pt-2">
               <!-- <img class="img-fluid" src="https://images.samsung.com/is/image/samsung/p6pim/in/feature/404590/in-934l-flex-zone-french-door-refrigerator-rf90a955387-521124224?$96_96_PNG$" alt=""> -->
          <p>View Inside</p>
           </div>
@@ -98,7 +98,7 @@
               <!-- <img class="img-fluid" src="https://images.samsung.com/is/content/samsung/p6pim/in/feature/404590/in-934l-flex-zone-french-door-refrigerator-rf90a955387-521124228.svg?$96_96_PNG$" alt=""> -->
               <p>Food AI</p>
           </div>
-          <div class="col bg-primary border border-dark rounded text-center pt-2">
+          <div class="col bg-light border border-dark rounded text-center pt-2">
               <p>Family hub</p>
           </div>
       </div>
