--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
   <!-- Copyright abhishek -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2023 Copyright:
-    <a class="text-dark" href="https://mdbootstrap.com/">Designed By Abhishek V</a>
+    <a class="text-dark" href="#">Designed By Abhishek V</a>
   </div>
   <!-- Copyright abhisehk -->
 </footer>
